# systematics-interface

./: .env.example  .gitignore  Cargo.toml  GRAPHQL_INTEGRATION.md  README.md  Trunk.toml  index.html  introspection_query.graphql  schema.graphql  style-dark-glass.css  style-glassy-neo.css  style.css  test_query.graphql
configs/: decad.json  dodecad.json  dyad.json  ennead.json  heptad.json  hexad.json  monad.json  octad.json  pentad.json  tetrad.json  triad.json  undecad.json
src/: api_app.rs  app.rs  lib.rs  main.rs
src/api/: client.rs  graphql_client.rs  mod.rs  models.rs
src/components/: api_graph_view.rs  graph_view.rs  mod.rs  system_selector.rs
src/core/: geometry.rs  mod.rs  system_config.rs
styles/: style-neomorphic.css
